[gd_scene load_steps=5 format=3 uid="uid://4o68b1ifhego"]

[ext_resource type="Script" path="res://scripts/Doors.gd" id="1_rqnk8"]
[ext_resource type="Shape2D" uid="uid://ctf8jarvxr5e3" path="res://Resources/doors_coll_shape.tres" id="2_kdxsp"]
[ext_resource type="Texture2D" uid="uid://dwll4hw4ro0id" path="res://Resources/Door.png" id="3_dm4i8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gm08n"]
size = Vector2(16.4277, 7)

[node name="Doors" type="StaticBody2D"]
collision_layer = 2
script = ExtResource("1_rqnk8")

[node name="DoorLockedCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = ExtResource("2_kdxsp")

[node name="DoorRight" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(7.0922, -2.97579)
scale = Vector2(-0.5, 0.5)
texture = ExtResource("3_dm4i8")
offset = Vector2(6.18439, 5.95159)
region_rect = Rect2(128, 80, 8, 8)

[node name="DoorLeft" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-7, -3)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_dm4i8")
offset = Vector2(6, 6)
region_rect = Rect2(128, 80, 8, 8)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="KeyDetectionCollision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1.19209e-07, -2.5)
scale = Vector2(1.09571, 1)
shape = SubResource("RectangleShape2D_gm08n")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
